--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,4 +1,4 @@
 //VARIABLES
 $title-font: 'Montserrat', sans-serif;
 $total-font: 'Montserrat', sans-serif;
-$title-color: #333;
+$title-color: blueviolet;
