--- a/ccs/style.css
+++ b/ccs/style.css
@@ -21,7 +21,7 @@ body {
     padding-bottom: 30px; }
   body header {
     width: 100%;
-    height: 80px;
+    height: auto;
     background-color: blueviolet;
     position: sticky;
     display: inline-block;
@@ -31,9 +31,22 @@ body {
     background-color: #8a2be2 !important; }
   body .logo-tamaño {
     width: auto;
-    height: 60px;
+    height: 80px;
     display: inline-block;
-    padding: 10px; }
+    padding: 10px;
+    background: whitesmoke;
+    box-shadow: 6px 6px 47px -15px rgba(0, 0, 0, 0.74);
+    -webkit-box-shadow: 6px 6px 47px -15px rgba(0, 0, 0, 0.74);
+    -moz-box-shadow: 6px 6px 47px -15px rgba(0, 0, 0, 0.74); }
+    body .logo-tamaño:hover {
+      background-color: darkpink; }
+  body .main-logo {
+    position: absolute;
+    display: block;
+    height: 10px;
+    left: 50px;
+    padding-top: 0px;
+    top: 0; }
   body .navbar div#navbarNav {
     justify-content: flex-end;
     font-size: 20px; }
@@ -89,7 +102,6 @@ body {
     body .destinos h3 {
       color: whitesmoke;
       text-align: center;
-      font-size: 30px;
       font-weight: lighter; }
       body .destinos h3 a {
         text-decoration: none;
@@ -164,7 +176,8 @@ body {
   color: blueviolet;
   margin-top: 20px;
   margin-bottom: 20px;
-  font-weight: bolder; }
+  font-weight: bolder;
+  font-size: 2.25rem; }
 
 .div-mexico, .div-new-york, .div-tailandia, .div-cuba, .div-japon, .div-amsterdam {
   padding-left: 20px;
@@ -176,9 +189,25 @@ body {
   text-align: center; }
 
 .principal-japon {
-  color: #333;
-  font-size: 12px; }
+  color: #2e1963;
+  font-size: 16px; }
 
 .principal-amsterdam {
-  color: #00ff00;
+  color: #2e1963;
+  font-size: 16px; }
+
+.principal-cuba {
+  color: #2e1963;
+  font-size: 16px; }
+
+.principal-new-york {
+  color: #2e1963;
+  font-size: 16px; }
+
+.principal-tailandia {
+  color: #2e1963;
+  font-size: 16px; }
+
+.principal-mexico, .principal-new-york, .principal-tailandia, .principal-cuba, .principal-japon, .principal-amsterdam {
+  color: #2e1963;
   font-size: 16px; }
