--- a/sass/style.scss
+++ b/sass/style.scss
@@ -43,9 +43,6 @@ body{
         box-shadow: 6px 6px 47px -15px rgba(0,0,0,0.74);
         -webkit-box-shadow: 6px 6px 47px -15px rgba(0,0,0,0.74);
         -moz-box-shadow: 6px 6px 47px -15px rgba(0,0,0,0.74);
-        @media(max-width:768px){
-            margin-left: 35%;
-        }
         &:hover{
             background-color: darkpink; 
         }
@@ -57,6 +54,9 @@ body{
         left: 50px;
         padding-top: 0px;
         top: 0;
+        @media(max-width:991px){
+            left: 37%;
+        }
     }
     //ANIDACION
     .navbar {
@@ -101,6 +101,7 @@ body{
     }
     h4{
         color: #FFFFFF;
+        background: blueviolet;
         font-weight: bold;
         text-shadow: #000000 3px 3px 5px;
     }
@@ -197,6 +198,12 @@ body{
     .card{
         height: 100%;
     }
+    .tarjeta{
+        text-decoration: none;
+    }
+    .card-text {
+        color: black;
+    }
     .mas-leidos{
         margin-top: 50px;
         margin-bottom: 50px;
@@ -236,7 +243,7 @@ body{
         width: 100%;    
         height: 100px;
         .footer-img{
-            height: 35px;
+            height: 50px;
             width: auto;
             padding: 8px;
             position: relative;
@@ -336,5 +343,16 @@ body{
 }
 
 .logo-footer{
-    
+    background: transparent;
+    box-shadow: unset;
+    width: auto;
+    height: 80px;
+    display: inline-block;
+    padding: 10px;
+}
+
+.copy{
+    color: white;
+    font-size: 10px;
+    text-align: center;
 }
