--- a/ccs/style.css
+++ b/ccs/style.css
@@ -11,11 +11,11 @@ body {
   background: url(../img/bg-cropped-final.jpg) center center/cover no-repeat fixed;
   /*TITULARES*/ }
   body .web-background {
-    width: 70%;
+    width: 80%;
     position: relative;
-    display: inline-grid;
-    margin-left: 15%;
-    margin-right: 15%;
+    display: inline-block;
+    margin-left: 10%;
+    margin-right: 10%;
     min-height: 470px;
     padding-top: 30px;
     padding-bottom: 30px; }
@@ -31,7 +31,7 @@ body {
     background-color: #8a2be2 !important; }
   body .logo-tamaño {
     width: auto;
-    height: 80px;
+    height: 5rem;
     display: inline-block;
     padding: 10px;
     background: whitesmoke;
@@ -50,6 +50,9 @@ body {
     @media (max-width: 991px) {
       body .main-logo {
         left: 37%; } }
+    @media (max-width: 500px) {
+      body .main-logo {
+        left: 25%; } }
   body .navbar div#navbarNav {
     justify-content: flex-end;
     font-size: 20px; }
@@ -75,6 +78,9 @@ body {
     font-family: "Montserrat", sans-serif;
     text-align: center;
     font-size: 60px; }
+    @media (max-width: 500px) {
+      body h2 {
+        font-size: 30px; } }
   body h2:hover {
     transform: rotate3d(4, 4, 5, 5deg);
     color: aqua; }
@@ -148,10 +154,10 @@ body {
   body .card-text {
     color: black; }
   body .mas-leidos {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    padding-bottom: 50px;
-    padding-top: 50px;
+    margin-top: 2rem;
+    margin-bottom: 4rem;
+    padding-bottom: 4rem;
+    padding-top: 2rem;
     background-color: rgba(255, 255, 255, 0.4); }
   body .articulo {
     display: inline-block;
@@ -174,7 +180,7 @@ body {
     width: 100%;
     height: 100px; }
     body footer .footer-img {
-      height: 50px;
+      height: 40px;
       width: auto;
       padding: 8px;
       position: relative;
@@ -194,8 +200,6 @@ body {
   padding-right: 20px; }
 
 .principal-mexico, .principal-new-york, .principal-tailandia, .principal-cuba, .principal-japon, .principal-amsterdam {
-  padding-left: 50px;
-  padding-right: 50px;
   text-align: center; }
 
 .principal-japon {
@@ -226,11 +230,15 @@ body {
   background: transparent;
   box-shadow: unset;
   width: auto;
-  height: 80px;
+  height: 60px;
   display: inline-block;
   padding: 10px; }
 
 .copy {
   color: white;
   font-size: 10px;
-  text-align: center; }
+  text-align: left;
+  margin-left: 10px; }
+
+.img-vista {
+  max-width: 100%; }
